# ComputerScience-NEA

./: .gitignore  CMakeLists.txt  READMe.md  glad.c  imgui.ini  main  main.cpp  main.py  make.sh  setup.sh
code/regex/: prefix-stem-suffix.hpp
cpp_source/: C++ Work.md  breakdown_functions.hpp  defines.hpp  element_definitions.h  regex.hpp  regex_and_arrayFunctions.hpp  stem_breakdown.hpp
dependencies/include/glad/: glad.h
headers/defines/: camera.hpp  global.hpp
headers/defines/functionalGroups/: alcohol.hpp  carbonyl.hpp
headers/init/: init_ImGui.hpp  init_SDL.hpp
headers/logic/: moleculeFunctions.hpp
headers/render/: cleanup.hpp  graphicsPipeline.hpp  init.hpp  run_loop.hpp  vertexSpecification.hpp
headers/render/runtime/: draw_ImGui.hpp  draw_OpenGL.hpp  events.hpp  predraw.hpp
headers/window/: vertexSpecification.hpp
include/: defines.cpp
include/defines/: atom.hpp  elements.hpp  functionalGroup.hpp  molecule.hpp
include/defines/functionalGroups/: alcohol.hpp  carbonyl.hpp
include/defines/functionalGroups/carbonylGroups/: ketone.hpp
include/glad/: glad.h
include/rendering/: 2D.cpp  3D.hpp  test_GLFW_&_GLAD.hpp
include/rendering/shaders/: fragmentShader.glsl  vertexShader.glsl
include/rendering/test_files/: test_GLFW.hpp
includes/: render.hpp
includes/defines/: camera.hpp  contextData.hpp  everythingClass.hpp
includes/defines/chemistry/: reaction.hpp
lib/glad/: gl.h  glad.h
main.dSYM/Contents/Resources/DWARF/: main
main.dSYM/Contents/Resources/Relocations/aarch64/: main.yml
python_source/: __init__.py
python_source/GUI/: GUI_demo.py  __init__.py  imagePage.py
python_source/GUI/GUI_Practice/: GUI_demo2.py
shaders/: fragmentShader.glsl  vertexShader.glsl
source/: main.cpp
src/: defines.cpp  defines.hpp  glad.c  main.cpp
src/cpp_src/: C++ Work.md  defines.hpp
src/cpp_src/regex/: stem_breakdown.hpp
src/render/: camera.cpp  cleanup.cpp  graphicsPipeline.cpp  init.cpp  runLoop.cpp  vertexSpecification.cpp
src/rendering/: 3D.cpp
